p2/conf/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:            
  name: inception-of-things
