p2/conf/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one
  namespace: inception-of-things
  labels:
    app: app-one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-one
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers:
        - name: hello-kubernetes
          image: "paulbouwer/hello-kubernetes:1.10.1"
          ports:
            - containerPort: 8080 # Default port => https://github.com/paulbouwer/hello-kubernetes/blob/c9d0a54c5f79baa439073166073f2737896eae0c/src/app/server.js#L18
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-two
  namespace: inception-of-things
  labels:
    app: app-two
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-two
  template:
    metadata:
      labels:
        app: app-two
    spec:
      containers:
        - name: hello-kubernetes
          image: "paulbouwer/hello-kubernetes:1.10.1"
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-three
  namespace: inception-of-things
  labels:
    app: app-three
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-three
  template:
    metadata:
      labels:
        app: app-three
    spec:
      containers:
        - name: hello-kubernetes
          image: "paulbouwer/hello-kubernetes:1.10.1"
          ports:
            - containerPort: 8080
