p2/conf/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-one
  namespace: inception-of-things
spec:
  selector:
    app: app-one
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app-two
  namespace: inception-of-things
spec:
  selector:
    app: app-two
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app-three
  namespace: inception-of-things
spec:
  selector:
    app: app-three
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
